--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/off_white">
 
     <RelativeLayout
@@ -50,5 +51,4 @@
         android:text="@string/greetings"
         android:textAlignment="center"
         android:textSize="24sp" />
-
 </RelativeLayout>
