--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00A023</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#00FF68</color>
+    <color name="colorSecondary">#C7CAC7</color>
+    <color name="colorAccent">#38454F</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="off_white">#FDFFFC</color>
