--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,7 +23,7 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/def_name"
+            android:text="@string/placeholder"
             android:textSize="24sp"
             android:layout_toEndOf="@+id/profile_pic"
             android:layout_marginTop="50dp"/>
