--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,7 +18,7 @@
     <RelativeLayout
         android:id="@+id/container"
         android:layout_width="360dp"
-        android:layout_height="130dp"
+        android:layout_height="105dp"
         android:background="@drawable/rectangle"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
@@ -36,6 +36,7 @@
             android:layout_centerInParent="true"
             android:layout_alignParentStart="true"
             android:layout_marginStart="45dp"
+            android:padding="10dp"
             android:background="?selectableItemBackgroundBorderless"
             style="?android:attr/borderlessButtonStyle" />
 
@@ -49,6 +50,7 @@
             android:layout_centerInParent="true"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="45dp"
+            android:padding="10dp"
             android:background="?selectableItemBackgroundBorderless"
             style="?android:attr/borderlessButtonStyle" />
     </RelativeLayout>
@@ -56,7 +58,6 @@
     <RelativeLayout
         android:layout_width="390dp"
         android:layout_height="530dp"
-        android:background="@drawable/rectangle"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
         android:layout_below="@+id/container"
