--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:src="@drawable/user_128"
+            android:src="@drawable/ic_user_128dp"
             android:layout_margin="15dp"
             android:contentDescription="@string/pic_description"/>
 
