--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -46,7 +46,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/ic_traffic_light_64dp"
+                    android:background="@drawable/radio_traffic_selector"
                     android:button="@null"
                     android:layout_margin="20dp"/>
 
@@ -55,7 +55,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/ic_road_64dp"
+                    android:background="@drawable/radio_roads_selector"
                     android:button="@null"
                     android:layout_margin="20dp"/>
 
@@ -64,7 +64,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@drawable/ic_sign_64dp"
+                    android:background="@drawable/radio_signs_selector"
                     android:button="@null"
                     android:layout_margin="20dp"/>
             </RadioGroup>
@@ -171,7 +171,8 @@
                 android:layout_width="325dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/report_location"
-                android:inputType="text"/>
+                android:inputType="text"
+                android:hint="Enter a location"/>
         </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
