--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -124,8 +124,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/reporting_city"
                 android:hint="Select a city"
-                android:completionThreshold="1"
-                android:completionHint="Select a city"/>
+                android:completionThreshold="1" />
         </RelativeLayout>
 
         <RelativeLayout
