UI aesthetics change

--- a/app/src/main/res/drawable/ic_pencil_64dp.xml
+++ b/app/src/main/res/drawable/ic_pencil_64dp.xml
@@ -1,9 +1,9 @@
 <vector android:height="64dp" android:viewportHeight="53.255"
     android:viewportWidth="53.255" android:width="64dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00FF68" android:pathData="M39.598,2.343c3.124,-3.124 8.19,-3.124 11.314,0s3.124,8.19 0,11.314L39.598,2.343z"/>
-    <path android:fillColor="#00FF68" android:pathData="M42.426,17.899l-25.914,25.915l-0.53,4.773l28.566,-28.567l0,0z"/>
-    <path android:fillColor="#00FF68" android:pathData="M10.325,42.93l4.773,-0.53l25.914,-25.915l-4.242,-4.242l-25.915,25.914z"/>
-    <path android:fillColor="#00FF68" android:pathData="M35.356,10.829l-2.122,-2.122l0,0l-28.566,28.566l4.773,-0.53z"/>
+    <path android:fillColor="#0BDAC0" android:pathData="M39.598,2.343c3.124,-3.124 8.19,-3.124 11.314,0s3.124,8.19 0,11.314L39.598,2.343z"/>
+    <path android:fillColor="#0BDAC0" android:pathData="M42.426,17.899l-25.914,25.915l-0.53,4.773l28.566,-28.567l0,0z"/>
+    <path android:fillColor="#0BDAC0" android:pathData="M10.325,42.93l4.773,-0.53l25.914,-25.915l-4.242,-4.242l-25.915,25.914z"/>
+    <path android:fillColor="#0BDAC0" android:pathData="M35.356,10.829l-2.122,-2.122l0,0l-28.566,28.566l4.773,-0.53z"/>
     <path android:fillColor="#38454F" android:pathData="M48.79,15.778l0,0l2.122,-2.121l-11.314,-11.314l-2.122,2.122l0.001,0z"/>
     <path android:fillColor="#38454F" android:pathData="M36.062,5.879l0,0l-1.414,1.414l0,0l11.314,11.313l0,0l1.414,-1.414l0,0z"/>
     <path android:fillColor="#C7CAC7" android:pathData="M14.424,44.488l-5.122,0.569c-0.036,0.004 -0.073,0.006 -0.109,0.006c0,0 -0.001,0 -0.001,0H9.192H9.192c-0.001,0 -0.001,0 -0.001,0c-0.036,0 -0.073,-0.002 -0.109,-0.006c-0.039,-0.004 -0.071,-0.026 -0.108,-0.035c-0.072,-0.017 -0.141,-0.035 -0.207,-0.067c-0.05,-0.024 -0.093,-0.053 -0.138,-0.084c-0.057,-0.04 -0.109,-0.083 -0.157,-0.134c-0.038,-0.04 -0.069,-0.081 -0.1,-0.127c-0.038,-0.057 -0.069,-0.116 -0.095,-0.181c-0.022,-0.054 -0.038,-0.107 -0.05,-0.165c-0.007,-0.032 -0.024,-0.059 -0.028,-0.092c-0.004,-0.038 0.01,-0.073 0.01,-0.11c0,-0.038 -0.014,-0.072 -0.01,-0.11l0.569,-5.122l-5.122,0.569c-0.037,0.004 -0.075,0.006 -0.111,0.006c-0.079,0 -0.152,-0.024 -0.227,-0.042L0.442,51.399l2.106,-2.106c0.391,-0.391 1.023,-0.391 1.414,0s0.391,1.023 0,1.414l-2.106,2.106l12.03,-2.864c-0.026,-0.109 -0.043,-0.222 -0.03,-0.339L14.424,44.488z"/>
