--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:src="@drawable/logo2"
+        android:src="@drawable/logo"
         android:background="@color/colorBg"
         android:padding="15dp"
         android:layout_marginTop="230dp"
