Implemented database for login

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="off_white">#FDFFFC</color>
-    <color name="colorBg">#F2FFFA</color>
+    <color name="colorBg">#FAFFFD</color>
 </resources>
