--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -19,7 +19,7 @@
             android:id="@+id/traffic_option2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Traffic Congestion"
+            android:text="Traffic congestion"
             android:textSize="18sp"/>
 
         <RadioButton
