--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="650dp">
 
         <TextView
             android:id="@+id/reporting_title"
@@ -132,6 +132,29 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/location_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/city_layout"
+            android:layout_alignStart="@+id/category_layout"
+            android:layout_marginTop="20dp">
+
+            <TextView
+                android:id="@+id/report_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/report_location"
+                android:textSize="20sp"/>
+
+            <EditText
+                android:layout_width="325dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/report_location"
+                android:inputType="text"
+                android:hint="Enter a location"/>
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/description_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -156,27 +179,15 @@
                 android:textColor="@color/colorSecondary"/>
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/location_layout"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/add_report"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/city_layout"
-            android:layout_alignStart="@+id/category_layout"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:id="@+id/report_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/report_location"
-                android:textSize="20sp"/>
-
-            <EditText
-                android:layout_width="325dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/report_location"
-                android:inputType="text"
-                android:hint="Enter a location"/>
-        </RelativeLayout>
+            android:layout_below="@id/description_layout"
+            android:layout_marginTop="50dp"
+            android:layout_centerHorizontal="true"
+            android:text="@string/report"
+            android:background="@drawable/rectangle"
+            android:backgroundTint="@color/colorPrimary"/>
     </RelativeLayout>
 </ScrollView>
