--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -56,23 +56,24 @@
             style="?android:attr/borderlessButtonStyle" />
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/btn_refresh"
+    <Spinner
+        android:id="@+id/city_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/container"
-        android:text="@string/refresh_list"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/colorPrimary"
-        android:background="@drawable/rectangle"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp">
+
+
+
+    </Spinner>
 
     <RelativeLayout
         android:layout_width="390dp"
         android:layout_height="530dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
-        android:layout_below="@+id/btn_refresh"
+        android:layout_below="@+id/city_spinner"
         android:clipToPadding="false"
         android:elevation="10dp">
 
