--- a/app/src/main/res/layout/layout_news.xml
+++ b/app/src/main/res/layout/layout_news.xml
@@ -26,7 +26,7 @@
             android:text="Title"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:outlineAmbientShadowColor="@android:color/black"
+            android:layout_marginStart="8dp"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/icon"/>
 
