--- a/app/src/main/res/layout/layout_history.xml
+++ b/app/src/main/res/layout/layout_history.xml
@@ -55,5 +55,15 @@
             android:layout_toEndOf="@+id/history_icon"
             android:text="Subtitle"
             android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/history_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/history_subtitle"
+            android:layout_alignBottom="@id/history_subtitle"
+            android:layout_marginEnd="10dp"
+            android:textAlignment="viewEnd"
+            android:text="City"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
