Implemented rewards page contents

--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -5,10 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".RewardActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World"
-        android:layout_centerInParent="true"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/reward_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="4dp"
+        android:scrollbars="vertical" />
 
 </RelativeLayout>
