Added comments and a few minor changes

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,20 +23,10 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/placeholder"
+            android:text="Dylan"
             android:textSize="24sp"
             android:layout_toEndOf="@+id/profile_pic"
-            android:layout_marginTop="50dp"/>
-
-        <TextView
-            android:id="@+id/edit_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/user_status"
-            android:textSize="18sp"
-            android:layout_toEndOf="@+id/profile_pic"
-            android:layout_below="@id/name"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="50dp" />
     </RelativeLayout>
 
     <ListView
